
option java_outer_classname="GetTypeMapResponseProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message GetTypeMapResponse {
	optional string map = 1;
}